syntax = "proto3";

package cedar;

option go_package = "internal";

import "google/protobuf/timestamp.proto";

message LogInfo{
  string project = 1;
  string version = 2;
  string variant = 3;
  string task_name = 4;
  string task_id = 5;
  int32 execution = 6;
  string test_name = 7;
  int32 trial = 8;
  string proc_name = 9;
  LogFormat format = 10;
  map<string, string> arguments = 11;
  bool mainline = 12;
  google.protobuf.Timestamp created_at = 13;
}

enum LogFormat {
  LOG_FORMAT_UNKNOWN = 0;
  LOG_FORMAT_TEXT = 1;
  LOG_FORMAT_JSON = 2;
  LOG_FORMAT_BSON = 3;
}

message Loglines {
  repeated LogLine lines = 1;
}

message LogLine {
  google.protobuf.Timestamp timestamp = 1;
  string data = 2;
}

message LogEndInfo {
  int32 exit_code = 1;
  google.protobuf.Timestamp completed_at = 2;
}
