syntax = "proto3";

package cedar;

option go_package = "internal";

import "google/protobuf/timestamp.proto";
import "formats.proto";

message SystemMetrics {
  SystemMetricsInfo info = 1;
  SystemMetricsArtifactInfo artifact = 2;
}

message SystemMetricsInfo {
  string project = 1;
  string version = 2;
  string variant = 3;
  string task_name = 4;
  string task_id = 5;
  int32 execution = 6;
  bool mainline = 7;
  google.protobuf.Timestamp created_at = 8;
}

message SystemMetricsArtifactInfo {
  DataFormat format = 1;
  CompressionType compression = 2;
  SchemaType schema = 3;
}

message SystemMetricsData {
  string id = 1;
  bytes data = 2;
}

message SystemMetricsSeriesEnd {
  string id = 1;
  google.protobuf.Timestamp completed_at = 3;
}

message SystemMetricsResponse {
  string id = 1;
}


service CedarSystemMetrics {
  rpc CreateSystemMetricRecord(SystemMetrics) returns (SystemMetricsResponse);
  rpc AddSystemMetrics(SystemMetricsData) returns (SystemMetricsResponse);
  rpc StreamSystemMetrics(stream SystemMetricsData) returns (SystemMetricsResponse);
  rpc CloseMetrics(SystemMetricsSeriesEnd) returns (SystemMetricsResponse);
}
